# vision-frontend

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  setup.sh
cmake/: utils.cmake
cmake/modules/: FindGStreamer.cmake  FindZMQ.cmake
doc/: zmq-endpoint.md
resources/: qml.qrc
resources/qml/: app.qml  bluetooth.qml  home.qml  main.qml  map.qml  music.qml
resources/qml/pages/: app.qml  bluetooth.qml  home.qml  map.qml  music.qml  vision.qml
scripts/: format_changed.sh
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/app/src/: app_bootstrap.cpp  app_bootstrap.hpp  app_init.hpp  main.cpp
src/common/: CMakeLists.txt
src/common/inc/common/qt/: qt_config.hpp
src/common/inc/common/utils/: json.hpp  logging.hpp
src/common/inc/common/zmq/: event_router.hpp  req_socket.hpp  sub_socket.hpp
src/common/src/qt/: qt_config.cpp
src/common/src/zmq/: event_router.cpp  req_socket.cpp  sub_socket.cpp
src/config/: CMakeLists.txt  app_config.cpp  app_config.hpp
src/config/inc/config/: app_config.hpp  zmq_config.hpp
src/config/src/: app_config.cpp
src/controllers/: CMakeLists.txt  camera_controller.cpp  camera_controller.hpp  capture_controller.cpp  capture_controller.hpp  command_controller.cpp  command_controller.hpp  network_controller.cpp  vision_controller.cpp  vision_controller.hpp
src/controllers/inc/controllers/: bluetooth_controller.hpp  camera_controller.hpp  capture_controller.hpp  command_controller.hpp  network_controller.hpp
src/controllers/inc/controllers/bluetooth/: bluetooth_controller.hpp
src/controllers/inc/controllers/camera/: camera_controller.hpp
src/controllers/inc/controllers/command/: command_controller.hpp
src/controllers/inc/controllers/features/: capture_controller.hpp
src/controllers/inc/controllers/music/: music_controller.hpp
src/controllers/inc/controllers/network/: network_controller.hpp
src/controllers/inc/controllers/vision/: vision_controller.hpp
src/controllers/src/: bluetooth_controller.cpp  camera_controller.cpp  capture_controller.cpp  command_controller.cpp  network_controller.cpp  vision_controller.cpp
src/controllers/src/bluetooth/: bluetooth_controller.cpp
src/controllers/src/camera/: camera_controller.cpp
src/controllers/src/command/: command_controller.cpp
src/controllers/src/features/: capture_controller.cpp
src/controllers/src/music/: music_controller.cpp
src/controllers/src/network/: network_controller.cpp
src/controllers/src/vision/: vision_controller.cpp
src/models/: CMakeLists.txt  detection_model.cpp  detection_model.hpp
src/models/inc/models/: detection_item.hpp  detection_model.hpp
src/models/inc/models/bluetooth/: bluetooth_device_model.hpp
src/models/inc/models/vision/: detection_item.hpp  detection_model.hpp
src/models/src/: bluetooth_device_model.cpp  detection_model.cpp
src/models/src/bluetooth/: bluetooth_device_model.cpp
src/models/src/vision/: detection_model.cpp
src/services/: CMakeLists.txt  camera_service.cpp  camera_service.hpp  vision_service.cpp  vision_service.hpp
src/services/inc/services/: camera_service.hpp  control_service.hpp
src/services/inc/services/camera/: camera_service.hpp
src/services/inc/services/control/: control_service.hpp
src/services/inc/services/music/: music_service.hpp
src/services/src/: camera_service.cpp
src/services/src/adapters/: i_service.hpp
src/services/src/adapters/music/: music_service_adapter.cpp  music_service_adapter.hpp
src/services/src/impl/: control_service.cpp
src/services/src/impl/camera/: camera_service.cpp
src/services/src/impl/control/: control_service.cpp
src/services/src/impl/music/: music_service.cpp
tools/: pre-commit
